added practice/project folders

--- a/practice/html-pages/index.html
+++ b/practice/html-pages/index.html
@@ -47,6 +47,8 @@
     <footer>
         <h1>Footer</h1>
     </footer>
+    <!-- Linking JavaScript File -->
+    <script src="../js/index.js"></script>
 </body>
 
 </html>
