updated practice files

--- a/practice/html-pages/index.html
+++ b/practice/html-pages/index.html
@@ -18,10 +18,10 @@
     <!-- Linking CSS File -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <title>Practice | Javascript Introduction</title>
+    <title>Practice | The DOM(Introduction): User Interaction & Changing the DOM</title>
 </head>
 
-<body class="dark">
+<body>
     <header>
         <a href="./index.html">
             <h1 class="logo">tsilist</h1>
@@ -40,7 +40,10 @@
     </header>
     <main class="main-container">
         <section class="content-container">
-            <h1 class="big-text">Let's Build Navigation & <span>Change the DOM!</span></h1>
+            <h1 class="big-text">Let's Build Lists
+                <br>&<br>
+                <span>Change the DOM!</span>
+            </h1>
             <img src="../images/background.png" alt="">
         </section>
     </main>
