--- a/practice/html-pages/ordered-list.html
+++ b/practice/html-pages/ordered-list.html
@@ -18,7 +18,7 @@
     <!-- Linking CSS File -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <title>Practice | Building Navbars & Ordered Lists</title>
+    <title>Practice | The DOM: Ordered Lists</title>
 </head>
 
 <body>
