--- a/practice/html-pages/unordered-list.html
+++ b/practice/html-pages/unordered-list.html
@@ -18,7 +18,7 @@
     <!-- Linking CSS File -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <title>Practice | Building Navbars & Unordered Lists</title>
+    <title>Practice | The DOM: Unordered Lists</title>
 </head>
 
 <body class="dark">
